# git-info

./: README.md  pyproject.toml
.github/: codecov.yml
.github/workflows/: build.yml  release.yml
git_json/: __init__.py  cli.py  generator.py
tests/: test_cli.py  test_cli_main.py  test_generator.py
