[tool.poetry]
name = "git-json"
version = "1.0.1"
description = "Generate comprehensive git information for your projects"
authors = ["Christoph Spörk <christoph.spoerk@gmail.com>"]
readme = "README.md"
packages = [{ include = "git_json" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.12.0"
pytest-cov = "^4.0.0"
coverage = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
git-json = "git_json.cli:main"

[tool.ruff]
line-length = 88
target-version = "py38"